--- a/docker/docker-compose/002-sonar-with-postgres/docker-compose.yaml
+++ b/docker/docker-compose/002-sonar-with-postgres/docker-compose.yaml
@@ -1,14 +1,15 @@
 version: '3.7'
 services:
   sonarqube:
-    # platform: linux/x86_64
+    platform: linux/x86_64
     image: sonarqube:latest
     ports:
-      - 9000:9000
+      - 9007:9000
     environment:
       - SONARQUBE_JDBC_USERNAME=sonar
       - SONARQUBE_JDBC_PASSWORD=sonar
       - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
+      # - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
     volumes:
       - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
@@ -16,7 +17,7 @@ services:
       - sonarqube_bundled-plugins:/opt/sonarqube/lib/bundled-plugins
 
   db:
-    # platform: linux/x86_64
+    platform: linux/x86_64
     image: postgres:latest
     environment:
       - POSTGRES_USER=sonar
