--- a/k8s/002-multi-container-pods/multi-conatiner.yaml
+++ b/k8s/002-multi-container-pods/multi-conatiner.yaml
@@ -1,22 +1,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: multi-container-deployment
+  name: web-deployment
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
-      app: multi-container
+      app: web
   template:
     metadata:
       labels:
-        app: multi-container
+        app: web
     spec:
       containers:
-      - name: web-container
-        image: nginx:latest
-        ports:
-        - containerPort: 80
-      - name: worker-container
-        image: busybox:latest
-        command: ["/bin/sh", "-c", "echo The worker container is running && sleep 3600"]
+        - name: nginx
+          image: nginx:latest
+          ports:
+            - containerPort: 80
+          resources:
+            limits:
+              cpu: 100m
+              memory: 128Mi
+            requests:
+              cpu: 100m
+              memory: 128Mi
+        - name: apache
+          image: httpd:latest
+          ports:
+            - containerPort: 8080
+          resources:
+            limits:
+              cpu: 100m
+              memory: 128Mi
+            requests:
+              cpu: 100m
+              memory: 128Mi
