--- a/k8s/005-ingress/005a-jenkins-ingress/jenkins-ingress.yaml
+++ b/k8s/005-ingress/005a-jenkins-ingress/jenkins-ingress.yaml
@@ -30,31 +30,24 @@ spec:
   - name: http
     port: 80
     targetPort: 8080
-  type: ClusterIP
+  type: LoadBalancer
 
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: example-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-spec:
-  rules:
-  - host: example.com
-    http:
-      paths:
-      - path: /jenkins
-        pathType: Prefix
-        backend:
-          service:
-            name: jenkins-service
-            port:
-              name: http
-      # - path: /app2
-      #   pathType: Prefix
-      #   backend:
-      #     service:
-      #       name: app2-service
-      #       port:
-      #         name: http
+# ---
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: example-ingress
+#   annotations:
+#     nginx.ingress.kubernetes.io/rewrite-target: /
+# spec:
+#   rules:
+#   - host: jenkins.example.com
+#     http:
+#       paths:
+#       - path: /jenkins
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: jenkins-service
+#             port:
+#               name: http
