--- a/k8s/009-projects/001-custom/calc.yaml
+++ b/k8s/009-projects/001-custom/calc.yaml
@@ -14,9 +14,9 @@ spec:
     spec:
       containers:
         - name: calc
-          image: linuxramu/calc:2.0
+          image: linuxramu/calc:2.5
           ports:
-            - containerPort: 8080
+            - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -28,5 +28,5 @@ spec:
   ports:
     - name: http
       port: 80
-      targetPort: 8080
-  type: ClusterIP
+      targetPort: 80
+  type: LoadBalancer
