all apps kubectl ing

--- a/k8s/009-projects/001-custom/all-ingress.yaml
+++ b/k8s/009-projects/001-custom/all-ingress.yaml
@@ -40,3 +40,10 @@ spec:
             name: horo-service
             port: 
               number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service: 
+            name: tsapps-service
+            port: 
+              number: 80
