--- a/k8s/009-projects/001-custom/tsapps.yaml
+++ b/k8s/009-projects/001-custom/tsapps.yaml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: calc-deployment
+  name: tsapps-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: calc
+      app: tsapps
   template:
     metadata:
       labels:
-        app: calc
+        app: tsapps
     spec:
       containers:
-        - name: calc
-          image: linuxramu/calc:2.5
+        - name: tsapps
+          image: linuxramu/tsapps:2.5
           ports:
             - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: calc-service
+  name: tsapps-service
 spec:
   selector:
-    app: calc
+    app: tsapps
   ports:
     - name: http
       port: 80
       targetPort: 80
-  type: ClusterIP
+  type: LoadBalancer
