--- a/k8s/003-deployments/003b-jenkins/jenkins-deploy.yaml
+++ b/k8s/003-deployments/003b-jenkins/jenkins-deploy.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: jenkins-deployment
   annotations:
-    "kubernetes.io/change-cause": "Deploying version 2.389."
+    "kubernetes.io/change-cause": "Deploying version 2.60.1"
 
 spec:
   replicas: 2
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: jenkins
-        image: jenkins/jenkins:2.389-rhel-ubi9-jdk17
+        image: jenkins/jenkins:2.60.1
         ports:
         - containerPort: 8080
       #   volumeMounts:
