--- a/k8s/001-single-pods/001a-nginx-pod/nginx.yaml
+++ b/k8s/001-single-pods/001a-nginx-pod/nginx.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: my-nginx
-  namespace: techslate
+  namespace: default
   labels:
     app: nginx
 spec:
