--- a/k8s/006-storage-config-secrets/006a-jenkins-secrets/jenkins-others.yaml
+++ b/k8s/006-storage-config-secrets/006a-jenkins-secrets/jenkins-others.yaml
@@ -19,7 +19,7 @@ metadata:
 type: Opaque
 data:
   username: cmFtdQ==              # this is base64 encoded username>
-  password: QFRlY2hTbGF0ZTc0OA==  # this is base64 encoded username>
+  password: QFRlY2hTbGF0ZTc0OA==  # this is base64 encoded password>
 
 
 ---
