--- a/python_with_k8s/01-flask_application/service.yaml
+++ b/python_with_k8s/01-flask_application/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-app
+  name: flask-app-service
 spec:
   selector:
     app: flask-app
-  type: LoadBalancer
   ports:
-  - name: http
-    port: 80
-    targetPort: 5000
+    - protocol: TCP
+      port: 80
+      targetPort: 5000
+  type: LoadBalancer
